Tue Jan  8 14:19:43 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcheckbutton.c (gtk_check_button_size_allocate): 
	Fix problem where child->requisition was accessed
	directly instead of calling get_child_requisition()
	(#68199, Damon Chaplin)

2001-01-08  James Henstridge  <james@daa.com.au>

	* gtk/gtkstyle.c: add trailing */ on doc comment.

Mon Jan  7 22:19:32 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkdrawable-x11.c (draw_with_pixmaps): Fix a
	problem where were the offset into the image was passed
	into convert_to_format() wrong.

	* gdk/x11/gdkdrawable-x11.c (gdk_x11_draw_pixbuf): Call
	gdk_x11_drawable_update_picture_clip () before using
	the picture; allow update_picture_clip() to take a NULL gc
	to mean no clipping.

2002-01-07  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtksocket.c (gtk_socket_get_id): Doc typo fix. (#68172)

	* gtk/gtktreemodel.c (gtk_tree_path_is_descendant): Fix docs.

	* gtk/gtktreemodel.c (gtk_tree_model_rows_reordered): Document.

	* gtk/gtkwindow.c (gtk_window_remove_accel_group): Fix docs.

	* gtk/gtkrc.c (gtk_rc_get_style_by_paths),
	gtk/gtkwidget.c (gtk_widget_get_toplevel, 
	gtk_widget_push_composite_child), gtk/gtkdialog.c 
	(gtk_dialog_new_with_buttons, gtk_dialog_run): Keep gtk-doc
	from messing up the indentation of inline examples.	

	* gtk/gtkmain.c, gtk/gtkrc.c: Consistently call g_getenv() 
	instead of getenv().

	* gtk/gtktreemodel.c, gtk/gtkaccelgroup.c, gtk/gtkclipboard.c,
	gtk/gtkdnd.c, gtk/gtkiconfactory.c, gtk/gtkrc.c,
	gtk/gtkstyle.c, gtk/gtkselection.c: Doc fixes.

	* gtk/gtkaccelmap.c (gtk_accel_map_add_filter,
	gtk_accel_map_foreach_unfiltered, gtk_accel_map_load_scanner):
	Document.

2002-01-07  Anders Carlsson  <andersca@gnu.org>

	* gtk/gtkcellrendererpixbuf.c (gtk_cell_renderer_pixbuf_render): Remove
	unused pixels and rowstride variables.
	(gtk_cell_renderer_pixbuf_get_size): Check for non-NULL width.

Mon Jan  7 08:48:23 2002  Tim Janik  <timj@gtk.org>
